--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,16 +18,27 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+button {
+  background-color: white;
+  color: black;
+  border-radius: 5px;
+  padding: 2px 4px;
+  margin: 0 8px;
+  max-width: 400px;
+}
+
+button:disabled {
+  background-color: gray;
+  color: white;
 }
